test/files/neg/t1672b.check
t1672b.scala:7: error: could not optimize @tailrec annotated method bar: it contains a recursive call not in tail position
      case _: Throwable => bar
                           ^
t1672b.scala:18: error: could not optimize @tailrec annotated method baz: it contains a recursive call not in tail position
      case _: Throwable => baz
                           ^
t1672b.scala:29: error: could not optimize @tailrec annotated method boz: it contains a recursive call not in tail position
      case _: Throwable => boz; ???
                           ^
t1672b.scala:36: error: could not optimize @tailrec annotated method bez: it contains a recursive call not in tail position
      bez
      ^
t1672b.scala:49: error: could not optimize @tailrec annotated method bar: it contains a recursive call not in tail position
      case _: Throwable => bar(i - 1)
                              ^
5 errors
